[MAPPASM-176] rework on jsw example using sample webapp from myfaces and jetty 7.x with configuration borrow from apache-archiva. Drop the current webapp
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/appassembler@17108 52ab4f32-60fc-0310-b215-8acea882cd1b